--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Maulana Syarif H</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
@@ -24,17 +27,17 @@
         </div>
       </div>
     </nav>
+
     <div class="hero-container">
       <div class="hero-background">
-        <img src="img/588fe2fc-e17d-475a-bd1c-80be0539ff51.png" alt="Foto Maulana Syarif Hidayatullah" />
+        <img src="img/588fe2fc-e17d-475a-bd1c-80be0539ff51.png" class="img-fluid" alt="Foto Maulana Syarif Hidayatullah" />
       </div>
-
       <div class="hero-foreground">
         <div class="hero-text-content">
           <p>Hi, I am</p>
           <h1 class="display-3 fw-bold">Maulana Syarif Hidayatullah</h1>
           <p class="lead">Computer Science Student / IPB University</p>
-          <div class="social-icons mt-4">
+          <div class="social-icons mt-4 d-flex">
             <a href="#"><i class="bi bi-envelope-at"></i></a>
             <a href="#"><i class="bi bi-github"></i></a>
             <a href="#"><i class="bi bi-linkedin"></i></a>
@@ -44,26 +47,29 @@
         </div>
       </div>
     </div>
+
     <main>
-         <section id="about" class="it-berries-section">
+      <section id="about" class="it-berries-section">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-7">
-                  <h2 class="fw-bold mb-4">About Me</h2>
-        <p class="lead col-md-8 mx-auto">
-          Tulis deskripsi yang lebih detail di sini. Ceritakan latar belakang pendidikan Anda, keahlian yang dimiliki (misal: HTML, CSS, JavaScript, Python), dan apa yang sedang Anda pelajari atau kerjakan saat ini.
-        </p>
-                <div class="col-lg-5 position-relative d-none d-lg-block"> </div>
+          <div class="row align-items-center">
+            <div class="col-lg-7">
+              <h2 class="fw-bold mb-4">About Me</h2>
+              <p class="lead">Tulis deskripsi yang lebih detail di sini. Ceritakan latar belakang pendidikan Anda, keahlian yang dimiliki (misal: HTML, CSS, JavaScript, Python), dan apa yang sedang Anda pelajari atau kerjakan saat ini.</p>
             </div>
+            <div class="col-lg-5 d-none d-lg-block">
+              <!-- Bisa ditambahkan gambar jika perlu -->
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
+
       <section id="portofolio" class="it-berries">
         <div class="container">
           <h2 class="text-center fw-bold mb-5">Experience</h2>
           <div class="row g-4">
             <div class="col-md-6 col-lg-4">
               <div class="card bg-dark text-white h-100">
-                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 1" />
+                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top img-fluid" alt="Gambar Proyek 1" />
                 <div class="card-body">
                   <h5 class="card-title">Nama Proyek 1</h5>
                   <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
@@ -72,7 +78,7 @@
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="card bg-dark text-white h-100">
-                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 2" />
+                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top img-fluid" alt="Gambar Proyek 2" />
                 <div class="card-body">
                   <h5 class="card-title">Nama Proyek 2</h5>
                   <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
@@ -81,7 +87,7 @@
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="card bg-dark text-white h-100">
-                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 3" />
+                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top img-fluid" alt="Gambar Proyek 3" />
                 <div class="card-body">
                   <h5 class="card-title">Nama Proyek 3</h5>
                   <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
@@ -92,6 +98,7 @@
         </div>
       </section>
     </main>
+
     <footer id="footer" class="bg-dark text-white text-center py-4 mt-5">
       <div class="container">
         <p>Contact Me:</p>
@@ -103,7 +110,6 @@
         <p class="mt-3 mb-0">© 2025 Maulana Syarif Hidayatullah.</p>
       </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
