--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Maulana Syarif Hidayatullah</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Maulana Syarif H</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
@@ -24,11 +25,11 @@
         </div>
       </div>
     </nav>
+
     <div class="hero-container">
       <div class="hero-background">
         <img src="img/588fe2fc-e17d-475a-bd1c-80be0539ff51.png" alt="Foto Maulana Syarif Hidayatullah" />
       </div>
-
       <div class="hero-foreground">
         <div class="hero-text-content">
           <p>Hi, I am</p>
@@ -39,24 +40,27 @@
             <a href="#"><i class="bi bi-github"></i></a>
             <a href="#"><i class="bi bi-linkedin"></i></a>
             <a href="https://wa.me/6281234567890" target="_blank"><i class="bi bi-whatsapp"></i></a>
-            <a href="https://instagram.com/username" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://instagram.com/m4ulanaa.sh" target="_blank"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
       </div>
     </div>
+
     <main>
-         <section id="about" class="it-berries-section">
+      <section id="about" class="it-berries-section">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-7">
-                  <h2 class="fw-bold mb-4">About Me</h2>
-        <p class="lead col-md-8 mx-auto">
-          Tulis deskripsi yang lebih detail di sini. Ceritakan latar belakang pendidikan Anda, keahlian yang dimiliki (misal: HTML, CSS, JavaScript, Python), dan apa yang sedang Anda pelajari atau kerjakan saat ini.
-        </p>
-                <div class="col-lg-5 position-relative d-none d-lg-block"> </div>
+          <div class="row align-items-center">
+            <div class="col-lg-7">
+              <h2 class="fw-bold mb-4">About Me</h2>
+              <p class="lead">Tulis deskripsi yang lebih detail di sini. Ceritakan latar belakang pendidikan Anda, keahlian yang dimiliki (misal: HTML, CSS, JavaScript, Python), dan apa yang sedang Anda pelajari atau kerjakan saat ini.</p>
             </div>
+            <div class="col-lg-5 position-relative d-none d-lg-block">
+              <!-- Tambahkan gambar atau elemen visual jika perlu -->
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
+
       <section id="portofolio" class="it-berries">
         <div class="container">
           <h2 class="text-center fw-bold mb-5">Experience</h2>
@@ -92,6 +96,7 @@
         </div>
       </section>
     </main>
+
     <footer id="footer" class="bg-dark text-white text-center py-4 mt-5">
       <div class="container">
         <p>Contact Me:</p>
