--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maulana Syarif Hidayatullah</title>
@@ -8,107 +8,114 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+</head>
+<body>
     <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Maulana Syarif H</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
-            <li class="nav-item"><a class="nav-link" href="#portofolio">Experience</a></li>
-            <li class="nav-item"><a class="nav-link" href="#footer">Contact Me</a></li>
-          </ul>
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="#">MSH</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto align-items-center">
+                    <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                    <li class="nav-item ms-lg-3 mt-2 mt-lg-0">
+                        <a class="btn btn-dark btn-contact" href="#footer">CONTACT ME</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
-    <div class="hero-container">
-      <div class="hero-background">
-        <img src="img/588fe2fc-e17d-475a-bd1c-80be0539ff51.png" alt="Foto Maulana Syarif Hidayatullah" />
-      </div>
-      <div class="hero-foreground">
-        <div class="hero-text-content">
-          <p>Hi, I am</p>
-          <h1 class="display-3 fw-bold">Maulana Syarif Hidayatullah</h1>
-          <p class="lead">Computer Science Student / IPB University</p>
-          <div class="social-icons mt-4">
-            <a href="#"><i class="bi bi-envelope-at"></i></a>
-            <a href="#"><i class="bi bi-github"></i></a>
-            <a href="#"><i class="bi bi-linkedin"></i></a>
-            <a href="https://wa.me/6281234567890" target="_blank"><i class="bi bi-whatsapp"></i></a>
-            <a href="https://instagram.com/m4ulanaa.sh" target="_blank"><i class="bi bi-instagram"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <main>
-      <section id="about" class="it-berries-section">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-lg-7">
-              <h2 class="fw-bold mb-4">About Me</h2>
-              <p class="lead">Tulis deskripsi yang lebih detail di sini. Ceritakan latar belakang pendidikan Anda, keahlian yang dimiliki (misal: HTML, CSS, JavaScript, Python), dan apa yang sedang Anda pelajari atau kerjakan saat ini.</p>
+        <section class="hero-section">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 hero-text-col">
+                        <div class="hero-text-content">
+                            <p class="mb-2">Hi, I am</p>
+                            <h1 class="display-3 fw-bold">Maulana Syarif H</h1>
+                            <h2 class="h4 fw-light mb-4">Computer Science Student / IPB University</h2>
+                            <div class="social-icons">
+                                <a href="#"><i class="bi bi-envelope-at"></i></a>
+                                <a href="#"><i class="bi bi-github"></i></a>
+                                <a href="#"><i class="bi bi-linkedin"></i></a>
+                                <a href="https://wa.me/6281234567890"><i class="bi bi-whatsapp"></i></a>
+                                <a href="https://instagram.com/m4ulanaa.sh"><i class="bi bi-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 hero-image-col">
+                        <img src="img/588fe2fc-e17d-475a-bd1c-80be0539ff51.png" alt="Foto Maulana Syarif Hidayatullah" class="img-fluid hero-image" />
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-5 position-relative d-none d-lg-block">
-              <!-- Tambahkan gambar atau elemen visual jika perlu -->
-            </div>
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <section id="portofolio" class="it-berries">
-        <div class="container">
-          <h2 class="text-center fw-bold mb-5">Experience</h2>
-          <div class="row g-4">
-            <div class="col-md-6 col-lg-4">
-              <div class="card bg-dark text-white h-100">
-                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 1" />
-                <div class="card-body">
-                  <h5 class="card-title">Nama Proyek 1</h5>
-                  <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
+        <section id="about" class="about-section">
+            <div class="container">
+                <h2 class="text-center fw-bold mb-4">About Me</h2>
+                <div class="row">
+                    <div class="col-lg-8 mx-auto text-center">
+                        <p class="lead text-white-50">
+                            Saya adalah mahasiswa Ilmu Komputer di IPB University dengan minat kuat pada pengembangan web dan desain UI/UX. Saya memiliki pengalaman menggunakan HTML, CSS, JavaScript, dan beberapa framework modern. Saat ini saya sedang mendalami...
+                        </p>
+                    </div>
                 </div>
-              </div>
             </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="card bg-dark text-white h-100">
-                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 2" />
-                <div class="card-body">
-                  <h5 class="card-title">Nama Proyek 2</h5>
-                  <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
+        </section>
+
+        <section id="experience" class="experience-section">
+            <div class="container">
+                <h2 class="text-center fw-bold mb-5">Experience</h2>
+                <div class="row g-4">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card bg-white h-100">
+                             <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 1" />
+                            <div class="card-body">
+                                <h5 class="card-title">Nama Proyek 1</h5>
+                                <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card bg-white h-100">
+                             <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 2" />
+                            <div class="card-body">
+                                <h5 class="card-title">Nama Proyek 2</h5>
+                                <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card bg-white h-100">
+                             <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 3" />
+                            <div class="card-body">
+                                <h5 class="card-title">Nama Proyek 3</h5>
+                                <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="card bg-dark text-white h-100">
-                <img src="img/WhatsApp Image 2025-07-14 at 23.08.41_bceceb97.jpg" class="card-img-top" alt="Gambar Proyek 3" />
-                <div class="card-body">
-                  <h5 class="card-title">Nama Proyek 3</h5>
-                  <p class="card-text">Deskripsi singkat tentang proyek ini, teknologi yang digunakan, dan peran Anda.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+        </section>
     </main>
 
-    <footer id="footer" class="bg-dark text-white text-center py-4 mt-5">
-      <div class="container">
-        <p>Contact Me:</p>
-        <a href="#" class="text-white me-3 fs-4"><i class="bi bi-envelope-at"></i></a>
-        <a href="#" class="text-white me-3 fs-4"><i class="bi bi-github"></i></a>
-        <a href="#" class="text-white me-3 fs-4"><i class="bi bi-linkedin"></i></a>
-        <a href="https://wa.me/6281326539780" class="text-white me-3 fs-4"><i class="bi bi-whatsapp"></i></a>
-        <a href="https://instagram.com/m4ulanaa.sh" class="text-white me-3 fs-4"><i class="bi bi-instagram"></i></a>
-        <p class="mt-3 mb-0">© 2025 Maulana Syarif Hidayatullah.</p>
-      </div>
+    <footer id="footer" class="bg-dark text-white text-center py-4">
+        <div class="container">
+            <p>Connect with me:</p>
+            <div class="footer-social-icons">
+                <a href="#" class="text-white me-3 fs-4"><i class="bi bi-envelope-at"></i></a>
+                <a href="#" class="text-white me-3 fs-4"><i class="bi bi-github"></i></a>
+                <a href="#" class="text-white me-3 fs-4"><i class="bi bi-linkedin"></i></a>
+                <a href="https://wa.me/6281326539780" class="text-white me-3 fs-4"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://instagram.com/m4ulanaa.sh" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
+            </div>
+            <p class="mt-3 mb-0">© 2025 Maulana Syarif Hidayatullah.</p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+</body>
 </html>
