--- a/index.html
+++ b/index.html
@@ -65,6 +65,57 @@
                 </div>
             </div>
         </section>
+         <section id="skills" class="skills-section">
+        <div class="container">
+            <h2 class="text-center fw-bold mb-5">My Skills</h2>
+            <div class="row g-4 text-center justify-content-center">
+                
+                <div class="col-6 col-md-4 col-lg-3">
+                    <div class="skill-item">
+                        <i class="bi bi-filetype-html fs-1"></i>
+                        <h5 class="mt-3">HTML5</h5>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-3">
+                    <div class="skill-item">
+                        <i class="bi bi-filetype-css fs-1"></i>
+                        <h5 class="mt-3">CSS3</h5>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-3">
+                    <div class="skill-item">
+                        <i class="bi bi-filetype-js fs-1"></i>
+                        <h5 class="mt-3">JavaScript</h5>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-3">
+                    <div class="skill-item">
+                        <i class="bi bi-bootstrap fs-1"></i>
+                        <h5 class="mt-3">Bootstrap</h5>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-3">
+                    <div class="skill-item">
+                        <i class="bi bi-git fs-1"></i>
+                        <h5 class="mt-3">Git</h5>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-3">
+                    <div class="skill-item">
+                        <i class="bi bi-filetype-py fs-1"></i>
+                        <h5 class="mt-3">Python</h5>
+                    </div>
+                </div>
+
+                </div>
+        </div>
+    </section>
+    <section id="experience" class="experience-section">
 
         <section id="experience" class="experience-section">
             <div class="container">
