--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <section id="about" class="about-section">
             <div class="container">
-                <h2 class="text-center fw-bold mb-4" style="color: rgb(255, 255, 255);">About Me</h2>
+                <h2 class="text-center fw-bold mb-4">About Me</h2>
                 <div class="row">
                     <div class="col-lg-8 mx-auto text-center">
                         <p class="lead text-white-50">
