--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                             <h1 class="display-3 fw-bold">Maulana Syarif H</h1>
                             <h2 class="h4 fw-light mb-4">Computer Science Student / IPB University</h2>
                             <div class="social-icons">
-                                <a href="#"><i class="bi bi-envelope-at"></i></a>
-                                <a href="#"><i class="bi bi-github"></i></a>
-                                <a href="#"><i class="bi bi-linkedin"></i></a>
+                                <a href="mailto:maulanash1117@gmail.com"><i class="bi bi-envelope-at"></i></a>
+                                <a href="https://github.com/m4ulanaash"><i class="bi bi-github"></i></a>
+                                <a href="https://www.linkedin.com/in/maulanash1711/"><i class="bi bi-linkedin"></i></a>
                                 <a href="https://wa.me/6281326539780"><i class="bi bi-whatsapp"></i></a>
                                 <a href="https://instagram.com/m4ulanaa.sh"><i class="bi bi-instagram"></i></a>
                             </div>
@@ -157,9 +157,9 @@
         <div class="container">
             <p>Connect with me:</p>
             <div class="footer-social-icons">
-                <a href="#" class="text-white me-3 fs-4"><i class="bi bi-envelope-at"></i></a>
-                <a href="#" class="text-white me-3 fs-4"><i class="bi bi-github"></i></a>
-                <a href="#" class="text-white me-3 fs-4"><i class="bi bi-linkedin"></i></a>
+                <a href="mailto:maulanash1117@gmail.com" class="text-white me-3 fs-4"><i class="bi bi-envelope-at"></i></a>
+                <a href="https://github.com/m4ulanaash" class="text-white me-3 fs-4"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/maulanash1711/" class="text-white me-3 fs-4"><i class="bi bi-linkedin"></i></a>
                 <a href="https://wa.me/6281326539780" class="text-white me-3 fs-4"><i class="bi bi-whatsapp"></i></a>
                 <a href="https://instagram.com/m4ulanaa.sh" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
             </div>
